chore: fix text alignment

--- a/assets/css/_partial/_icon.scss
+++ b/assets/css/_partial/_icon.scss
@@ -17,10 +17,6 @@ img.emoji {
   display: inline-block !important;
 }
 
-.fontawesome-icon {
-  display: inline-block;
-}
-
 .fontawesome-icon > svg {
   display: inline-block;
   width: 1.25em;
